--- a/iWebSite_ComeIndus/Views/Account/Login.cshtml
+++ b/iWebSite_ComeIndus/Views/Account/Login.cshtml
@@ -20,7 +20,7 @@
                 <input type="submit" value="Login">
             </form>
             <br>
-            <a href="">註冊會員</a>
+            <a href="/Account/Register">註冊會員</a>
         </body>
     </html>
     //value = "@if (Model.Account != null) { Model.Account; }else{ null; }"
